[gd_scene format=3 uid="uid://cvhkrjsovo0lf"]

[ext_resource type="Script" uid="uid://b1y50kwd8yme3" path="res://src/page/download/source_card.gd" id="1_h676o"]
[ext_resource type="Texture2D" uid="uid://b4s86yj60klpo" path="res://asset/icon/godot_big.svg" id="2_0lsju"]
[ext_resource type="Texture2D" uid="uid://f3w2u4j2iw1k" path="res://asset/icon/unstable.svg" id="2_vno5b"]
[ext_resource type="Texture2D" uid="uid://ddqhbrd1han2p" path="res://asset/icon/download.svg" id="4_cieoe"]

[node name="SourceCard" type="PanelContainer" unique_id=805770578]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_h676o")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1802397959]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=322069250]
layout_mode = 2

[node name="SourceIcon" type="TextureRect" parent="MarginContainer/HBoxContainer" unique_id=1698356943]
layout_mode = 2
texture = ExtResource("2_0lsju")
expand_mode = 3
stretch_mode = 5

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer" unique_id=1143017360]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0.0.0"
vertical_alignment = 1

[node name="IDLabel" type="Label" parent="MarginContainer/HBoxContainer" unique_id=1549217442]
modulate = Color(1, 1, 1, 0.6)
layout_mode = 2
text = "0.0.0-stable-dotnet"
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer" unique_id=341143519]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="UnstableIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/MarginContainer" unique_id=2018716420]
layout_mode = 2
tooltip_text = "SOURCE_CARD_UNSTABLE_HINT"
texture = ExtResource("2_vno5b")
expand_mode = 3
stretch_mode = 5

[node name="Pass" type="Control" parent="MarginContainer/HBoxContainer" unique_id=2067015311]
layout_mode = 2
size_flags_horizontal = 3

[node name="DownloadButton" type="Button" parent="MarginContainer/HBoxContainer" unique_id=805701093]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
tooltip_text = "SOURCE_CARD_DOWNLOAD_HINT"
icon = ExtResource("4_cieoe")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/DownloadButton" to="." method="_on_download_button_pressed"]
